Fix button alignment in modal, update text, and adjust CSS for layout consistency

--- a/src/components/PermissionsManagement/PermissionsManagement.css
+++ b/src/components/PermissionsManagement/PermissionsManagement.css
@@ -151,19 +151,19 @@
 }
 
 .ContainerReminder{
-  width: 400px;
-  height: 250px;
-  position: fixed;  
+  width: 300px;
+  padding: 20px;
+  position: fixed;
   top: 30%;
-  right: 15%;
-  transform: translateX(50%);
+  right: 10%;
+  transform: translate(50%, -50%);
   background-color: white;
   z-index: 1000;
   border: 1px solid #ccc;
   border-radius: 10px;
-  justify-content: space-between;
   display: flex;
   flex-direction: column;
+  align-items: center;
   box-shadow: 0px 2px 10px black;
 }
 
@@ -180,23 +180,21 @@
 }
 
 .ReminderBody{
-  flex: 3;
-  padding: 0px 15px;
+  padding: 10px 0;
   border-bottom: 1px solid #ccc;
   border-top: 1px solid #ccc;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+  margin-bottom: 10px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .ReminderButton{
-  flex: 1;
   display: flex;
+  gap: 10px;
   justify-content: center;
-  align-items: center;
-  padding: 5px 0;
-  padding-left: 15px;
-  gap: 20px;
+  width: 100%;
+  padding-top: 10px;
 }
 .ReminderButton button:first-child{
   height: 80%;
